# ollm

./: .gitignore  BENCHMARK_RUNTIME_ARCHITECTURE_IMPLEMENTATION_PLAN.md  README.md  mkdocs.yml  pyproject.toml
.beads/: interactions.jsonl  metadata.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  docs.yml
dev/: 404.html  index.html  objects.inv
dev/benchmarking/: index.html
dev/cli/: index.html
dev/development/: index.html
dev/search/: search_index.json
dev/terminal-interface/: index.html
docs/: benchmarking.md  cli.md  development.md  index.md  library.md  terminal-interface.md
docs/api/: client.md  config.md  inference.md  loader.md  plan.md  reference.md  resolver.md  server.md
docs/architecture/: backend-selection.md  kv-strategy-matrix.md  model-resolution.md  overview.md  provider-backends.md  specialization.md  tiered-kv-cache.md
docs/cli/: chat.md  doctor.md  models.md  prompt.md  server.md
docs/development/: tiered-kv-cache-adr.md  weight-transport-adr.md
docs/guides/: configuration.md  contributing.md  installation.md  local-server.md  model-references.md  models-discovery.md  multimodal.md  optimization.md  providers.md  python-standards-audit.md  python-standards.md  quickstart.md  runtime-planning.md  troubleshooting.md
docs/javascripts/: mermaid-init.js
examples/: example.py  example_audio.py  example_image.py  ollm.toml
scripts/: benchmark_runtime.py  benchmark_runtime_support.py  check_python_standards.py  full_tests.py  gpt_oss_export.py  llama_export.py  qwen3_next_export.py  runtime_smoke.py  scripts.py  test.py  test_autoinference.py
src/ollm/: __init__.py  async_io.py  attention.py  client.py  dense_projection_chunking.py  device_staging.py  gemma3.py  (+32 more)
tests/: __init__.py  benchmark_support.py  cli_support.py  fakes.py  media_server.py  ollama_server.py  openai_compatible_server.py  server_openai_support.py  server_support.py  test_application_service.py  test_backend_selector.py  test_benchmark_history.py  test_benchmark_history_keys.py  test_benchmark_history_windowing.py  test_benchmark_probe_execution.py  test_benchmark_reporting.py  test_benchmark_reporting_cache_modes.py  test_benchmark_resources.py  test_benchmark_settings.py  test_benchmarks.py  test_chat_session.py  test_chunked_prefill_scope.py  test_cli.py  test_cli_server.py  test_cli_settings.py  test_dense_projection_chunking.py  test_doctor.py  test_export_scripts.py  test_gds_loader.py  test_generic_backend.py  test_history.py  test_inference.py  test_kv_cache_journal_store.py  test_kv_cache_matrix.py  test_kv_cache_policy.py  test_kv_cache_quantized_store.py  test_kv_cache_store_common.py  test_kvcache.py  test_kvcache_paged.py  test_kvcache_quantized.py  (+45 more)
(+179 files in other folders)
