[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "ollm"
version = "1.0.3"
description = "LLM Inference for Large-Context Offline Workloads"
authors = [
  { name="Anuar Sharafudinov", email="anuarsh@ailabs.us" }
]
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "accelerate",
    "huggingface-hub",
    "numpy",
    "prompt-toolkit",
    "rich",
    "typer",
    "torch>2.6.0", #tested: 2.8.0
    "transformers>=4.57.0" #tested: 4.55.4, 4.56.1
]

[project.scripts]
ollm = "ollm.cli.main:main"

[project.optional-dependencies]
adapters = [
    "peft"
]
audio = [
    "librosa",
    "mistral-common[audio]"
]
cuda = [
    "flash-attn", #tested: 2.7.4.post1
    "triton"
]
export = [
    "safetensors"
]

[project.urls]
"Homepage" = "https://github.com/Mega4alik/ollm"
"Bug Tracker" = "https://github.com/Mega4alik/ollm/issues"

[dependency-groups]
dev = [
    "pip-audit",
    "pytest",
    "ruff",
    "ty>=0.0.23",
]
docs = [
    "mkdocs>=1.6.1,<2.0.0",
    "mkdocs-autorefs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mike>=2.1.3,<3",
    "ruff"
]

[tool.hatch.build.targets.wheel]
packages = ["src/ollm"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
src = ["src", "tests", "scripts", "examples"]

[tool.ruff.lint]
extend-select = ["I", "TID252"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
known-first-party = ["ollm"]
